tdf#141141 sync SalFrame::GetFrameWeld and weld::GetPopupParent

so they both use the same FrameWindow

Change-Id: I7c58a4f2c8e82abc45eaf1dfee8eb2720503ecc7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113209
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>